2007-08-13  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * configure.in: Added 'es' (Spanish) to ALL_LINGUAS.

2007-08-11  Inaki Larranaga Murgoitio  <dooteo@zundan.com>

        * configure.in: Added 'eu' (Basque) to ALL_LINGUAS.

2007-05-21  Jordi Mas <jmas@softcatala.org>

	* configure.in: Added Catalan to ALL_LINGUAS

2007-05-16  David Lodge <dave@cirt.net>

	* configure.in: Added en_GB to ALL_LINGUAS

2007-04-03  Pema Geyleg <pema.geyleg@gmail.com>

	* dz.po: Updated dzongkha translation.

2006-06-14  Federico Mena Quintero  <federico@novell.com>

	Fix https://bugzilla.novell.com/show_bug.cgi?id=183413:

	* src/nautilus-share.c (PropertyPage): Add a "was_writable"
	field.  We'll use this to know if we need to change the folder's
	permissions once share gets modified:  we want to be able to
	remove write permission as soon as possible if the share gets
	modified to be read-only.
	(create_property_page): Set page->was_writable.
	(NEED_ALWAYS_MASK, NEED_IF_WRITABLE_MASK, NEED_ALL_MASK): New
	macros for the sets of permissions that we may need to change in
	the usershared folder.
	(remove_from_saved_permissions): New function.  Removes a subset
	of permissions from the ones we had saved previously.
	(restore_write_permissions): New helper function.
	(restore_saved_permissions): Use remove_from_saved_permissions()
	with NEED_ALL_MASK so that we remove all the permissions that we
	added previously.
	(property_page_commit): If the page is no longer writable, restore
	the write permissions that we added.

2006-06-08  Federico Mena Quintero  <federico@novell.com>

	Fix https://bugzilla.novell.com/show_bug.cgi?id=181811:

	* src/shares.c (samba_configuration_supports_guest_ok): New
	function.  Calls "testparm -s --parameter-name='usershare allow
	guests'" to see if Samba is configured to support "guest_ok=y"
	when calling "net usershare".
	(add_share): Call samba_configuration_supports_guest_ok(), and
	then add "guest_ok=y" to the "net usershare" command line if